--- a/mandelbulber2/formula/ui/transf_blockify_v2.ui
+++ b/mandelbulber2/formula/ui/transf_blockify_v2.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_blockify_v2</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>925</width>
+    <width>943</width>
     <height>1920</height>
    </rect>
   </property>
@@ -252,7 +252,7 @@ pre-transform, slot#1 for 1 iteration</string>
      <item row="4" column="1">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
        <property name="text">
-        <string>test</string>
+        <string>mode2</string>
        </property>
       </widget>
      </item>
