--- a/mandelbulber2/qt/light_sources_manager.ui
+++ b/mandelbulber2/qt/light_sources_manager.ui
@@ -41,7 +41,7 @@
      <item>
       <widget class="QPushButton" name="pushButton_newLight">
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Add new light source to the scene. This new light will aprrear as a new tab below. There is no limit for number of light sources.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Add a new light source to the scene. This new light will appear as a new tab below. There is no limit to the number of light sources.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="text">
         <string>New
@@ -52,7 +52,7 @@ light</string>
      <item>
       <widget class="QPushButton" name="pushButton_duplicateLight">
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Duplicate actually selected light source. All parameters will be copied to new one.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Duplicate the selected light source. All parameters will be copied to the new one.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="text">
         <string>Duplicate
@@ -63,7 +63,7 @@ light</string>
      <item>
       <widget class="QPushButton" name="pushButton_deleteLight">
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Delete actually selected light source.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Delete the selected light source.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="text">
         <string>Delete
@@ -74,7 +74,7 @@ light</string>
      <item>
       <widget class="QPushButton" name="pushButton_placeLight">
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Allows to place light sources using mouse pointer.&lt;/p&gt;&lt;p&gt;Light of actually selected tab can be manipulated in folowing ways:&lt;/p&gt;&lt;p&gt;- left mouse button click on the image moves light in front of selected point. Front distance from point can be adjusted using mouse wheel + alt key.&lt;/p&gt;&lt;p&gt;- dragging of light using mouse pointer (holding left mouse button)&lt;/p&gt;&lt;p&gt;- rotating mouse wheel while holding control key moves light forward/backward&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Place a light source using the mouse pointer.&lt;/p&gt;&lt;p&gt;Light position (for  selected light tab) can be manipulated in following ways:&lt;/p&gt;&lt;p&gt;- left mouse button click on the image places light in front of selected point (offset by placement distance.)  Placement distance from the selected point can be adjusted using mouse wheel + alt key.&lt;/p&gt;&lt;p&gt;- move light by dragging the mouse pointer while holding left mouse button. Moves light while maintaining placement distance&lt;/p&gt;&lt;p&gt;- rotating mouse wheel while holding control key moves light forward/backward&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="text">
         <string>Place/move
@@ -95,15 +95,15 @@ light</string>
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyTabWidgetWithCheckboxes</class>
    <extends>QTabWidget</extends>
    <header>my_tab_widget_with_checkboxes.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
